log

Thu 14 Mar 2024 08:21:09 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
7266127
Thu 14 Mar 2024 08:21:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
ab35978
Thu 14 Mar 2024 08:25:05 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
3d7c84a
Thu 14 Mar 2024 08:26:46 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
e924015
Thu 14 Mar 2024 08:30:16 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 10/70
54bf301
Thu 14 Mar 2024 08:33:44 PM UTC: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:12: error: ‘temp’ may be used uninitialized [-Werror=maybe-uninitialized]
   33 |     arr[i] = temp;
      |     ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
776d139
Thu 14 Mar 2024 08:34:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
07d5d6f
Thu 14 Mar 2024 08:34:45 PM UTC: 
 exercises.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 20/70
611817d
Thu 14 Mar 2024 08:41:39 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/string.h:33,
                 from exercises.c:5,
                 from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:46:21: error: invalid initializer
   46 |   int nuevo_arr[] = NULL;
      |                     ^~~~
In file included from test.c:1:
exercises.c:51:7: error: value computed is not used [-Werror=unused-value]
   51 |       *newSize++;
      |       ^~~~~~~~~~
exercises.c:56:10: error: function returns address of local variable [-Werror=return-local-addr]
   56 |   return nuevo_arr;
      |          ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8e9ef85
Thu 14 Mar 2024 08:43:00 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:47:3: error: variable-sized object may not be initialized
   47 |   int nuevo_arr[*newSize] = NULL;
      |   ^~~
exercises.c:57:19: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   57 |   return nuevo_arr[*newSize];
      |          ~~~~~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b0c13d7
Thu 14 Mar 2024 08:43:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:47:3: error: variable-sized object may not be initialized
   47 |   int nuevo_arr[*newSize] = NULL;
      |   ^~~
exercises.c:57:10: error: function returns address of local variable [-Werror=return-local-addr]
   57 |   return nuevo_arr;
      |          ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c7cf4f1
Thu 14 Mar 2024 08:44:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:57:10: error: function returns address of local variable [-Werror=return-local-addr]
   57 |   return nuevo_arr;
      |          ^~~~~~~~~
exercises.c:51:16: error: array subscript <unknown> is outside array bounds of ‘int[<U1480>]’ [-Werror=array-bounds]
   51 |       nuevo_arr[*newSize] = arr[i];
      |       ~~~~~~~~~^~~~~~~~~~
exercises.c:47:7: note: while referencing ‘nuevo_arr.109’
   47 |   int nuevo_arr[*newSize];
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
408820f
Thu 14 Mar 2024 08:45:54 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:57:10: error: ‘nuevo_arr’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   57 |   return nuevo_arr;
      |          ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a715bad
Thu 14 Mar 2024 08:46:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
2bf19a5
Thu 14 Mar 2024 08:55:17 PM UTC: 
 exercises.c | 36 ++++++++++++++++++++++++++++++++++--
 1 file changed, 34 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:75:18: error: ‘size’ undeclared (first use in this function); did you mean ‘size2’?
   75 |         if (i == size - 1) {
      |                  ^~~~
      |                  size2
exercises.c:75:18: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:97:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   97 |   return result;
      |          ^~~~~~
exercises.c:66:6: note: declared here
   66 | void mergeSortedArrays(int arr1[], int size1, int arr2[], int size2, int result[]) {
      |      ^~~~~~~~~~~~~~~~~
exercises.c:67:7: error: unused variable ‘talla’ [-Werror=unused-variable]
   67 |   int talla = size1 + size2;
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
3357656
